# wasi-http-middleware-prototype

./: Cargo.toml  README.md
components/business-logic/: Cargo.toml
components/business-logic/src/: lib.rs
components/business-logic/wit/: world.wit
components/middleware/: Cargo.toml
components/middleware/src/: lib.rs
components/middleware/wit/: world.wit
components/wit/http/: types.wit
src/: main.rs
