[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cargo-component-bindings = "0.5.0"
async-compression = { version = "0.4", features = ["futures-io", "gzip"] }
futures = "0.3.28"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:middleware"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "../wit/http" }
"wasi:clocks" = { path = "../wit/clocks" }
"wasi:io" = { path = "../wit/io" }
"wasi:random" = { path = "../wit/random" }
"wasi:cli" = { path = "../wit/cli" }
"wasi:filesystem" = { path = "../wit/filesystem" }
"wasi:sockets" = { path = "../wit/sockets" }
